--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-requests==2.24.0
-cryptography==2.9.2
-PyJWT==1.7.1
-slackclient==2.7.1
-slackeventsapi==2.1.0
-###wsk
+#wsk
 gevent == 1.2.2
 flask == 1.0.2
